@@ -8,6 +8,8 @@ User visible changes
 
 * The functions WRITE and WRITE-TO-STRING take the :LINES keyword argument.
 
+* Support Cygwin's "/cygdrive/drive/path" pathname symtax on Win32.
+
 * Fixed a bug: LDIFF now handles dotted lists correctly.
 
 2.27 (2001-07-17)
